# musubi-tuner-scripts

./: .gitignore  .gitmodules  0、install pwsh.sh  1.5.qwen_vl_captions.ps1  1.5、qwen_vl_captions.ps1  1.6.GUI.ps1  1.install-uv-qinglong.ps1  1、install-uv-qinglong.ps1  2.1hy_cache_latent_and_text_encoder.ps1  2.2wan_cache_latent_and_text_encoder.ps1  2.2、wan_cache_latent_and_text_encoder.ps1  2.3framepack_cache_latent_and_text_encoder.ps1  2.3、framepack_cache_latent_and_text_encoder.ps1  2.4flux_kontext_cache_latent_and_text_encoder.ps1  2.4、flux_kontext_cache_latent_and_text_encoder.ps1  2.5、qwen_image_cache_latent_and_text_encoder.ps1  2.6hv_1_5_cache_latent_and_text_encoder.ps1  2.6、hv_1_5_cache_latent_and_text_encoder.ps1  2.7long_cat_cache_latent_and_text_encoder.ps1  2.7、long_cat_cache_latent_and_text_encoder.ps1  2.8zimage_cache_latent_and_text_encoder.ps1  2.8、zimage_cache_latent_and_text_encoder.ps1  2.9.1、flux2_cache_task01_kv.ps1  2.9.2、flux2_cache_task02_qversion.ps1  2.9flux2_cache_latent_and_text_encoder.ps1  2.9、flux2_cache_latent_and_text_encoder.ps1  2cache_latent_and_text_encoder.ps1  2、cache_latent_and_text_encoder.ps1  3.1hy_train_lora.ps1  3.1、hy_train_lora.ps1  3.2wan_train_lora.ps1  3.2、wan_train_lora.ps1  3.3framepack_train_lora.ps1  3.3、framepack_train_lora.ps1  3.4flux_kontext_train_lora.ps1  3.4、flux_kontext_train_lora.ps1  3.5.1qwen_image_train_db.ps1  3.5.1、qwen_image_train_db.ps1  3.5qwen_image_train_lora.ps1  3.5、qwen_image_train_lora.ps1  (+46 more)
gui/: PARAMETERS.md  README.en.md  README.ja.md  README.ko.md  README.md  debug_theme.py  launch.py  main.py  start_nicegui.ps1  test_theme.py  theme.py
gui/components/: advanced_inputs.py  demo_advanced_inputs.py  execution_panel.py  log_viewer.py  model_selector.py  path_selector.py  preset_manager.py  side_tools.py
gui/examples/: reuse_styles_example.py
gui/tests/: test_advanced_inputs.py  test_command_builder.py  test_dataset_page_refactor.py  test_env_config.py  test_flux2_script_param_consistency.py  test_form_state.py  test_gui_followup_fixes.py  test_gui_launcher_cross_platform.py  test_gui_port_integration.py  test_gui_qinglong_alignment_integration.py  test_i18n_client_scope.py  test_install_script_downloads.py  test_job_manager.py  test_log_buffer.py  (+13 more)
powershell/: native_command.ps1
toml/: qinglong-Single-Frame-datasets.toml  qinglong-datasets.toml  qinglong-flux-kontext-datasets.toml  qinglong-qwen-image-datasets.toml  qinglong-qwen-image-edit-datasets.toml  qinglong-video-datasets.toml  qinglong.txt  qinglong_flux_kontext.txt  qinglong_framepack.txt  qinglong_framepack_one_frame.txt  qinglong_hidream_o1.txt  qinglong_qwen_image.txt  qinglong_qwen_image_edit.txt  qinglong_wan.txt  qinglong_z_image_turbo.txt  task01_kv_flux2.toml  task01_kv_flux2_sample.txt  task02_qversion_flux2.toml  task02_qversion_flux2_sample.txt
(+77 files in other folders)
